tests/neg-macros/i13021.check
-- [E007] Type Mismatch Error: tests/neg-macros/i13021/DFToken.scala:14:8 ----------------------------------------------
14 |  token.data // error
   |  ^^^^^^^^^^
   |  Found:    (token.data : Any)
   |  Required: Int
   |
   | longer explanation available when compiling with `-explain`
